# FireRedVAD-Engineering

./: .gitignore  CODE_OF_CONDUCT.md  CODE_REVIEW.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README_en.md  plot_comparison.py  pyproject.toml  requirements.txt  setup.py
examples/: demo.py  plot_vad_prob.py
fireredvad/: __init__.py  cli.py
inference/: streaming.py
models/: Stream-VAD.onnx  Stream-VAD.onnx.data
